--- a/calculator.html
+++ b/calculator.html
@@ -37,7 +37,7 @@
 						case "multiply":
 							return this.number1 * this.number2
 						case "divide":
-							return this.number1 / this.number
+							return this.number1 / this.number2
 					}
 				}
 			}
